Practica Kubernetes Script K8s/Deployment.YAML
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - name: webapi
        image: jaredgj/WebApi:latest
        ports:
        - containerPort: 80
